Show details angular

--- a/shell-application/src/styles.scss
+++ b/shell-application/src/styles.scss
@@ -2,3 +2,13 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+iframe {
+  width: 100%;
+  height: 900px;
+  border-style:  none;
+  display: none;
+&.shown {
+   display: block;
+ }
+}
